--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="Sub_container Big_container">
             <div class="Sub_sub_container">
                 <div class="img">
-                    <img src="/img01.svg" alt="">
+                    <img src="img01.svg" alt="">
                 </div>
                 <div class="text">
                     <div class="title_container">
@@ -34,7 +34,7 @@
             <div class="Sub_sub_container">
                 
                 <div class="img">
-                    <img src="/img02.svg" alt="">
+                    <img src="img02.svg" alt="">
                 </div>
                 <div class="text">
                     <div class="title_container">
@@ -46,7 +46,7 @@
             <div class="Sub_sub_container">
                 
                 <div class="img">
-                    <img src="/img03.svg" alt="">
+                    <img src="img03.svg" alt="">
                 </div>
                 <div class="text">
                     <div class="title_container">
@@ -57,7 +57,7 @@
             </div>
             <div class="Sub_sub_container">
                 <div class="img">
-                    <img src="/img04.svg" alt="">
+                    <img src="img04.svg" alt="">
                 </div>
                 <div class="text">
                     <div class="title_container">
